# fandom-dashboard

./: .env  .gitignore  pyproject.toml
config/fandoms/: example.yaml  momoclo.yaml
launchd/: com.kaji.fandom-dashboard.collect.plist
scripts/: backfill_summaries.py  collect.sh  fix_backfill.py
src/fandom_dashboard/: config.py  run.py
src/fandom_dashboard/collector/: dedup.py  fetch.py  save.py  summarize.py
src/fandom_dashboard/llm/: base.py  claude_cli.py  gemini.py
tests/: test_dedup.py  test_fetch_instagram.py  test_run.py  test_save.py  test_summarize.py
